created the views for nap, diaper and eating

--- a/platforms/ios/www/templates/tab-menu.html
+++ b/platforms/ios/www/templates/tab-menu.html
@@ -1,12 +1,5 @@
-<ion-view title="Dashboard" class="bg">
-  <ion-content class="has-header padding">
-
-  <h1>Main Menu</h1>
-  <hr>
-
-  <button>Nap</button><br>
-  <button>Diaper</button><br>
-  <button>Eating</button><br>
-
-  </ion-content>
+<ion-view title="Dashboard">
+ <ion-content class="has-header padding">
+   <h1>Menu</h1>
+ </ion-content>
 </ion-view>
