--- a/platforms/ios/www/templates/tab-nap.html
+++ b/platforms/ios/www/templates/tab-nap.html
@@ -1,24 +1,24 @@
 <ion-view title="Dashboard" class="bg">
-	<ion-content class="has-header padding">
+    <ion-content class="has-header padding">
 
-	<h1>Nap Form</h1>
-	<hr>
+    <h1>Nap View</h1>
+    <hr>
 
-	<form action="POST">
-		<label for="napStart">Nap Start</label><br>
-		<button name="napStart" id="napStart">Start</button><br>
-	</form>
+    <form action="POST">
+        <label for="napStart">Nap Start</label><br>
+        <button name="napStart" id="napStart">Start</button><br>
+    </form>
 
-	<form action="POST">
-		<label for="napStop">Nap Stop</label><br>
-		<button name="napStop" id="napStop">Stop</button><br>
-	</form>
-	
-	<form>
-		<label for="notes">Notes</label><br>
-		<textarea name="notes" id="notes" type="text"></textarea><br>
-		<button type="submit" id="submit">Submit</button>
-	</form>
+    <form action="POST">
+        <label for="napStop">Nap Stop</label><br>
+        <button name="napStop" id="napStop">Stop</button><br>
+    </form>
+    
+    <form>
+        <label for="notes">Notes</label><br>
+        <textarea name="notes" id="notes" type="text"></textarea><br>
+        <button type="submit" id="submit">Submit</button>
+    </form>
 
-	</ion-content>
+    </ion-content>
 </ion-view>
