--- a/www/templates/tab-nap.html
+++ b/www/templates/tab-nap.html
@@ -1,7 +1,7 @@
 <ion-view title="Dashboard" class="bg">
     <ion-content class="has-header padding">
 
-    <h1>Nap Form</h1>
+    <h1>Nap View</h1>
     <hr>
 
     <form action="POST">
