--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -17,6 +17,16 @@
    <ion-nav-view name="tab-nap"></ion-nav-view>
  </ion-tab>
 
+ <!-- Adopt Tab -->
+ <ion-tab title="Diaper" icon="icon ion-heart" href="#/tab/diaper">
+   <ion-nav-view name="tab-diaper"></ion-nav-view>
+ </ion-tab>
+
+ <!-- Adopt Tab -->
+ <ion-tab title="Eating" icon="icon ion-heart" href="#/tab/eating">
+   <ion-nav-view name="tab-eating"></ion-nav-view>
+ </ion-tab>
+
  <!-- About Tab -->
  <ion-tab title="Settings" icon="icon ion-gear-b" href="#/tab/settings">
    <ion-nav-view name="tab-settings"></ion-nav-view>
