--- a/platforms/ios/www/templates/tabs.html
+++ b/platforms/ios/www/templates/tabs.html
@@ -1,41 +1,36 @@
 <!-- 
-  Create tabs with an icon and label, using the tabs-positive style. 
-  Each tab's child <ion-nav-view> directive will have its own 
-  navigation history that also transitions its views in and out.
+ Create tabs with an icon and label, using the tabs-positive style. 
+ Each tab's child <ion-nav-view> directive will have its own 
+ navigation history that also transitions its views in and out.
 -->
 <ion-tabs class="tabs-icon-top">
 
 
-  <!-- Pets Tab -->
-
-  <ion-tab title="Menu" icon="icon ion-home" href="#/tab/menu">
-    <ion-nav-view name="tab-menu"></ion-nav-view>
-
-  </ion-tab>
+ <!-- Pets Tab -->
+ <ion-tab title="Menu" icon="icon ion-home" href="#/tab/menu">
+   <ion-nav-view name="tab-menu"></ion-nav-view>
+ </ion-tab>
 
 
-  <!-- Adopt Tab -->
+ <!-- Adopt Tab -->
+ <ion-tab title="Nap" icon="icon ion-heart" href="#/tab/nap">
+   <ion-nav-view name="tab-nap"></ion-nav-view>
+ </ion-tab>
 
-  <ion-tab title="Nap" icon="icon ion-heart" href="#/tab/nap">
-    <ion-nav-view name="tab-nap"></ion-nav-view>
-  </ion-tab>
+ <!-- Adopt Tab -->
+ <ion-tab title="Diaper" icon="icon ion-heart" href="#/tab/diaper">
+   <ion-nav-view name="tab-diaper"></ion-nav-view>
+ </ion-tab>
 
-  <!-- Adopt Tab -->
-  <ion-tab title="Diaper" icon="icon ion-heart" href="#/tab/diaper">
-    <ion-nav-view name="tab-diaper"></ion-nav-view>
-  </ion-tab>
+ <!-- Adopt Tab -->
+ <ion-tab title="Eating" icon="icon ion-heart" href="#/tab/eating">
+   <ion-nav-view name="tab-eating"></ion-nav-view>
+ </ion-tab>
 
-  <!-- Adopt Tab -->
-  <ion-tab title="Eating" icon="icon ion-heart" href="#/tab/eating">
-    <ion-nav-view name="tab-eating"></ion-nav-view>
-
-  </ion-tab>
-
-
-  <!-- About Tab -->
-  <ion-tab title="Account" icon="icon ion-gear-b" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
-  </ion-tab>
+ <!-- About Tab -->
+ <ion-tab title="Settings" icon="icon ion-gear-b" href="#/tab/settings">
+   <ion-nav-view name="tab-settings"></ion-nav-view>
+ </ion-tab>
 
 
 </ion-tabs>
