added settings view, added route and controller for that view. made edits on the menu view as well.

--- a/platforms/ios/www/templates/tab-menu.html
+++ b/platforms/ios/www/templates/tab-menu.html
@@ -1,5 +1,9 @@
 <ion-view title="Dashboard">
  <ion-content class="has-header padding">
    <h1>Menu</h1>
+   <button type="submit" id="addChild"></button>
+
+   <img class="media-object" src="/img/ionic.png" alt="ionic">
+
  </ion-content>
 </ion-view>
