--- a/platforms/ios/www/templates/tab-diaper.html
+++ b/platforms/ios/www/templates/tab-diaper.html
@@ -3,6 +3,52 @@
 
     <h1>Diaper View</h1>
     <hr>
+    <h2>When did you last change your baby?</h2>
+       <form action="POST">
+        <label for="diaperChange">Change</label><br>
+        <button name="diaperChange" id="diaperChange">Start</button><br>
+    </form>
 
+    
+
+        <h2>What was inside?</h2>
+        <form name="myform" action="#" method="POST">
+            <input type="radio" name="contents" value="number_one">Number One <br>
+            <input type="radio" name="contents" value="number_two">Number Two <br>
+            <input type="radio" name="contents" value="number_two">Both <br>
+            </div>
+        </form>
+
+        <h2>What conistency was the poop?</h2>
+        <form name="myform" action="#" method="POST">
+            
+            <input type="radio" name="consistency" value="1">Hard <br>
+            <input type="radio" name="consistency" value="2">Chunky <br>
+            <input type="radio" name="consistency" value="3">Sticky <br>
+            <input type="radio" name="consistency" value="4">Thick <br>
+            <input type="radio" name="consistency" value="5">Seedy <br>
+            <input type="radio" name="consistency" value="6">Loose <br>
+            </div>
+        </form>
+        <h2>What color was the poop?</h2>
+       <form name="myform2" action="#" method="POST">
+            
+            <input type="radio" name="color" value="1">White <br>
+            <input type="radio" name="color" value="2">Beige <br>
+            <input type="radio" name="color" value="3">Light Green <br>
+            <input type="radio" name="color" value="4">Dark Green <br>
+            <input type="radio" name="color" value="5">Light Brown <br>
+            <input type="radio" name="color" value="6">Dark Brown <br>
+            </div>
+        </form>
+        <h2>Did the diaper leak?</h2>
+        <form name="myform3" action="#" method="POST">
+            
+            <input type="radio" name="leak" value="yes">Yes <br>
+            <input type="radio" name="leak" value="no">No <br>
+            </div>
+        </form>
+        <h2>Enter any notes below.</h2>
+        <textarea name="notes" rows="4" cols="50">Diaper Notes</textarea>
     </ion-content>
 </ion-view>
