--- a/platforms/ios/www/templates/tabs.html
+++ b/platforms/ios/www/templates/tabs.html
@@ -6,28 +6,28 @@
 <ion-tabs class="tabs-icon-top">
 
 
- <!-- Pets Tab -->
+ <!-- Menu Tab -->
  <ion-tab title="Menu" icon="icon ion-home" href="#/tab/menu">
    <ion-nav-view name="tab-menu"></ion-nav-view>
  </ion-tab>
 
 
- <!-- Adopt Tab -->
+ <!-- Nap Tab -->
  <ion-tab title="Nap" icon="icon ion-heart" href="#/tab/nap">
    <ion-nav-view name="tab-nap"></ion-nav-view>
  </ion-tab>
 
- <!-- Adopt Tab -->
+ <!-- Diaper Tab -->
  <ion-tab title="Diaper" icon="icon ion-heart" href="#/tab/diaper">
    <ion-nav-view name="tab-diaper"></ion-nav-view>
  </ion-tab>
 
- <!-- Adopt Tab -->
+ <!-- Eating Tab -->
  <ion-tab title="Eating" icon="icon ion-heart" href="#/tab/eating">
    <ion-nav-view name="tab-eating"></ion-nav-view>
  </ion-tab>
 
- <!-- About Tab -->
+ <!-- Settings Tab -->
  <ion-tab title="Settings" icon="icon ion-gear-b" href="#/tab/settings">
    <ion-nav-view name="tab-settings"></ion-nav-view>
  </ion-tab>
