--- a/www/templates/tab-settings.html
+++ b/www/templates/tab-settings.html
@@ -1,7 +1,10 @@
 <ion-view title="Dashboard">
  <ion-content class="has-header padding">
-   <h1>Settings</h1>
    
+   <h1>Settings</h1>
+   <hr>
+
+   <!-- form for changing username and email -->
    <form>
    		<label for="username">Username</label><br>
 		<input type="text" name="username" id="username"><br>
