created bottle view and breast view

--- a/platforms/ios/www/templates/tab-eating.html
+++ b/platforms/ios/www/templates/tab-eating.html
@@ -4,5 +4,12 @@
     <h1>Eating View</h1>
     <hr>
 
-    </ion-content>
+    <button ng-click="changeView('tab-eating-breast')" class="button button-block button-positive">
+		Breast Fed
+	</button>
+
+	<button ng-click="changeView('tab-eating-bottle')" class="button button-block button-energized">
+		Bottle Fed
+	</button>
+
 </ion-view>
