--- a/platforms/ios/www/templates/tab-settings.html
+++ b/platforms/ios/www/templates/tab-settings.html
@@ -1,13 +1,21 @@
 <ion-view title="Dashboard">
  <ion-content class="has-header padding">
-   <h1>Settings</h1>
    
-   <form>
-   		<label for="username">Username</label><br>
-		<input type="text" name="username" id="username"><br>
-		<label for="email">Email</label><br>
-		<input type="text" name="email" id="email"><br>
-	</form>
+   <h1>Settings</h1>
+   <hr>
+
+   <!-- form for changing username and email -->
+	<div class="list">
+		<label class="item item-input">
+		<input type="text" placeholder="Username">
+		</label>
+		<label class="item item-input">
+		<input type="text" placeholder="Email">
+		</label>
+		<button type="submit"class="button button-positive">
+			Save
+		</button>
+	</div>
 	
  </ion-content>
 </ion-view>
