--- a/www/templates/tab-settings.html
+++ b/www/templates/tab-settings.html
@@ -5,12 +5,17 @@
    <hr>
 
    <!-- form for changing username and email -->
-   <form>
-   		<label for="username">Username</label><br>
-		<input type="text" name="username" id="username"><br>
-		<label for="email">Email</label><br>
-		<input type="text" name="email" id="email"><br>
-	</form>
+	<div class="list">
+		<label class="item item-input">
+		<input type="text" placeholder="Username">
+		</label>
+		<label class="item item-input">
+		<input type="text" placeholder="Email">
+		</label>
+		<button type="submit"class="button button-positive">
+			Save
+		</button>
+	</div>
 	
  </ion-content>
 </ion-view>
