Fixed some bugs.

--- a/platforms/ios/www/templates/tab-menu.html
+++ b/platforms/ios/www/templates/tab-menu.html
@@ -1,14 +1,13 @@
-<ion-slide-box on-slide-changed="slideHasChanged($index)">
-  <ion-slide>
-    <div class="box blue"><h1>BLUE</h1></div>
-  </ion-slide>
-  <ion-slide>
-    <div class="box yellow"><h1>YELLOW</h1></div>
-  </ion-slide>
-  <ion-slide>
-    <div class="box pink"><h1>PINK</h1></div>
-  </ion-slide>
-</ion-slide-box>
+<ion-view title="Dashboard">
+ <ion-content class="has-header padding">
+
+   	<h1>Menu</h1>
+   	<button type="submit" id="addChild"></button>
+
+   	<img class="media-object" src="/img/ionic.png" alt="ionic">
+
+ </ion-content>
+</ion-view>
 
 
 
