added ionic styling to the settings view

--- a/platforms/ios/www/templates/tab-settings.html
+++ b/platforms/ios/www/templates/tab-settings.html
@@ -7,10 +7,12 @@
    <!-- form for changing username and email -->
 	<div class="list">
 		<label class="item item-input">
-		<input type="text" placeholder="Username">
+		  <span class="input-label">Username</span>
+		  <input type="text">
 		</label>
 		<label class="item item-input">
-		<input type="text" placeholder="Email">
+		  <span class="input-label">Email</span>
+		  <input type="email">
 		</label>
 		<button type="submit"class="button button-positive">
 			Save
